--- a/WebContent/offer.xhtml
+++ b/WebContent/offer.xhtml
@@ -67,8 +67,8 @@
 			<p:outputLabel for="typeSite" value="Type de site :" />
 			<p:selectOneMenu id="typeSite" value="#{entryBean.typeSite}">
 	
-				<f:selectItem itemValue="Historic" itemLabel="Loisir" />
-				<f:selectItem itemValue="Hobbies" itemLabel="Historique" />
+				<f:selectItem itemValue="Historic" itemLabel="Historique" />
+				<f:selectItem itemValue="Hobbies" itemLabel="Loisir" />
 			</p:selectOneMenu>
 			
 
